@@ -14,6 +14,7 @@
       <w>contactmethods</w>
       <w>coyier</w>
       <w>curauth</w>
+      <w>dashicons</w>
       <w>davatron</w>
       <w>daverupert</w>
       <w>fieger</w>
